--- a/style.css
+++ b/style.css
@@ -2,3 +2,43 @@
     font-family: Norse-Bold;
     src: url(./assets/font/Norse-Bold.otf);
   }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.container{
+    display: flex;
+  }
+
+#odin{
+    width: 70px;
+    height: 70px;
+}
+.main{
+   background-image: url("./assets/bgimg.jpg");
+   background-repeat: no-repeat;
+   background-size: auto 100vh; 
+    width: 350px;
+    height: 100vh; 
+    padding-top: 100px;
+}
+  .transparent{
+    width: auto;
+    height: 80px;
+    background-color:black;
+    opacity: 0.5;
+  }
+  .logoOdin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+  }
+  .logoOdin span{
+  
+    font-family: Norse-Bold, sans-serif ;
+    font-weight: bold;
+    font-size: 2.5rem;
+    color: white;
+  }
