--- a/style.css
+++ b/style.css
@@ -42,3 +42,48 @@
     font-size: 2.5rem;
     color: white;
   }
+  .title{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 1.25rem;
+    border: 1px solid #e9e9e9;
+    background-color: #e9e9e9;
+    padding: 20px;
+  }
+  .form{
+    border: 1px solid #ffffff;
+    padding: 20px;
+    box-shadow: 0 5px #e9e9e9;
+  }
+  .form span{
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+  }
+ .sign{
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0 0 20px;
+  font-family: 'Roboto', sans-serif;
+  gap: 30px;
+ }
+ .sign a{
+  text-decoration: none;
+  color: #596D48;
+  font-weight: bold;
+ 
+ }
+ .sign p{
+  font-weight: 500;
+ }
+ #btn{
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 5px  #596D48;
+  background-color: #596D48;
+  font-weight: bold;
+  color: #ffffff;
+ }
